Fix styling on smaller screens

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,16 @@
+.Header {
+    flex-basis: 1rem;
+    flex-grow: 1;
+    max-height: 4rem;
+}
+
 .title {
     margin-left: 2rem;
+    height: 100%;
+}
+
+@media (max-height: 660px) { 
+    .title {
+        display: none;
+    }
 }
