--- a/src/components/game/Input.css
+++ b/src/components/game/Input.css
@@ -6,4 +6,5 @@
 
 .letterButton {
     padding: 1rem 0.7rem !important;
+    margin: 0.5rem !important;
 }
